@@ -4,14 +4,14 @@
 # @arguments base font size
 # @keyword dplot
 # @alias theme_gray
-theme_grey <- function(base_size = 12) {
+theme_grey <- function(base_size = 12, base_family = "") {
   structure(list(
     axis.line =          theme_blank(),
-    axis.text.x =        theme_text(size = base_size * 0.8 , lineheight = 0.9, colour = "grey50", vjust = 1),
-    axis.text.y =        theme_text(size = base_size * 0.8, lineheight = 0.9, colour = "grey50", hjust = 1),
+    axis.text.x =        theme_text(family = base_family, size = base_size * 0.8 , lineheight = 0.9, colour = "grey50", vjust = 1),
+    axis.text.y =        theme_text(family = base_family, size = base_size * 0.8, lineheight = 0.9, colour = "grey50", hjust = 1),
     axis.ticks =         theme_segment(colour = "grey50"),
-    axis.title.x =       theme_text(size = base_size, vjust = 0.5),
-    axis.title.y =       theme_text(size = base_size, angle = 90, vjust = 0.5),
+    axis.title.x =       theme_text(family = base_family, size = base_size, vjust = 0.5),
+    axis.title.y =       theme_text(family = base_family, size = base_size, angle = 90, vjust = 0.5),
     axis.ticks.length =  unit(0.15, "cm"),
     axis.ticks.margin =  unit(0.1, "cm"),
 
@@ -20,9 +20,9 @@ theme_grey <- function(base_size = 12) {
     legend.key.size =    unit(1.2, "lines"),
     legend.key.height =  NA,
     legend.key.width =   NA,
-    legend.text =        theme_text(size =  base_size * 0.8),
+    legend.text =        theme_text(family = base_family, size =  base_size * 0.8),
     legend.text.align =  NA,
-    legend.title =       theme_text(size =  base_size * 0.8, face =  "bold", hjust =  0),
+    legend.title =       theme_text(family = base_family, size =  base_size * 0.8, face =  "bold", hjust =  0),
     legend.title.align = NA,
     legend.position =    "right",
     legend.direction =   "vertical",
@@ -35,11 +35,11 @@ theme_grey <- function(base_size = 12) {
     panel.margin =       unit(0.25, "lines"),
 
     strip.background =   theme_rect(fill =  "grey80", colour =  NA), 
-    strip.text.x =       theme_text(size =  base_size * 0.8),
-    strip.text.y =       theme_text(size =  base_size * 0.8, angle =  -90),
+    strip.text.x =       theme_text(family = base_family, size =  base_size * 0.8),
+    strip.text.y =       theme_text(family = base_family, size =  base_size * 0.8, angle =  -90),
 
     plot.background =    theme_rect(colour =  NA, fill =  "white"),
-    plot.title =         theme_text(size =  base_size * 1.2),
+    plot.title =         theme_text(family = base_family, size =  base_size * 1.2),
     plot.margin =        unit(c(1, 1, 0.5, 0.5), "lines")
   ), class =  "options")
 }
@@ -50,14 +50,14 @@ theme_gray <- theme_grey
 # 
 # @arguments base font size
 # @keyword dplot
-theme_bw <- function(base_size =  12) {
+theme_bw <- function(base_size =  12, base_family = "") {
   structure(list(
     axis.line =          theme_blank(),
-    axis.text.x =        theme_text(size =  base_size * 0.8 , lineheight =  0.9, vjust =  1),
-    axis.text.y =        theme_text(size =  base_size * 0.8, lineheight =  0.9, hjust =  1),
+    axis.text.x =        theme_text(family = base_family, size =  base_size * 0.8 , lineheight =  0.9, vjust =  1),
+    axis.text.y =        theme_text(family = base_family, size =  base_size * 0.8, lineheight =  0.9, hjust =  1),
     axis.ticks =         theme_segment(colour =  "black", size =  0.2),
-    axis.title.x =       theme_text(size =  base_size, vjust =  1),
-    axis.title.y =       theme_text(size =  base_size, angle =  90, vjust =  0.5),
+    axis.title.x =       theme_text(family = base_family, size =  base_size, vjust =  1),
+    axis.title.y =       theme_text(family = base_family, size =  base_size, angle =  90, vjust =  0.5),
     axis.ticks.length =  unit(0.3, "lines"),
     axis.ticks.margin =  unit(0.5, "lines"),
 
@@ -66,9 +66,9 @@ theme_bw <- function(base_size =  12) {
     legend.key.size =    unit(1.2, "lines"),
     legend.key.height =  NA,
     legend.key.width =   NA,
-    legend.text =        theme_text(size =  base_size * 0.8),
+    legend.text =        theme_text(family = base_family, size =  base_size * 0.8),
     legend.text.align =  NA,
-    legend.title =       theme_text(size =  base_size * 0.8, face =  "bold", hjust =  0),
+    legend.title =       theme_text(family = base_family, size =  base_size * 0.8, face =  "bold", hjust =  0),
     legend.title.align = NA,
     legend.position =    "right",
     legend.direction =   "vertical",
@@ -81,11 +81,11 @@ theme_bw <- function(base_size =  12) {
     panel.margin =       unit(0.25, "lines"),
 
     strip.background =   theme_rect(fill =  "grey80", colour =  "grey50"), 
-    strip.text.x =       theme_text(size =  base_size * 0.8),
-    strip.text.y =       theme_text(size =  base_size * 0.8, angle =  -90),
+    strip.text.x =       theme_text(family = base_family, size =  base_size * 0.8),
+    strip.text.y =       theme_text(family = base_family, size =  base_size * 0.8, angle =  -90),
 
     plot.background =    theme_rect(colour =  NA),
-    plot.title =         theme_text(size =  base_size * 1.2),
+    plot.title =         theme_text(family = base_family, size =  base_size * 1.2),
     plot.margin =        unit(c(1, 1, 0.5, 0.5), "lines")
   ), class =  "options")
 }
